<resources>

    <!-- Main -->
    <string name="app_name">세번만</string>

    <!-- AndroidManifest.xml -->
    <string name="Only3ServiceName">세번만 서비스</string>
    <string name="Only3SubServiceName">세번만 보조 서비스</string>
    <string name="LockServiceName">세번만 잠금 서비스</string>
    <string name="LockSubServiceName">세번만 잠금 보조 서비스</string>
    <string name="title_activity_lock">전체 잠금중</string>

    <!-- Fragment Name -->
    <string name="fragment_main">메인</string>
    <string name="fragment_app">어플 설정</string>
    <string name="fragment_lock">전체 잠금</string>
    <string name="fragment_settings">설정</string>
    <string name="fragment_lock_main">전체잠금중</string>
    <string name="fragment_lock_white_list">화이트 리스트</string>

    <!-- license -->
    <string name="license_title">오픈소스 라이센스 정보</string>
    <string name="license_msg">오픈소스 라이센스
\n
\n- AppCompat-v7
\n(android.support.v7)
\n
\n- Android-support-v4-PreferenceFragment
\n(https://github.com/kolavar/android-support-v4-preferencefragment)
\n
\n- L-Dialogs
\n(https://github.com/lewisjdeane/L-Dialogs)
\n
\n- MaterialDesign
\n(https://github.com/navasmdc/MaterialDesignLibrary)
\n
\n- DateTimePicker
\n(https://github.com/flavienlaurent/datetimepicker)
\n
\n- Icons
\nic_lock_open.png
\n(Android SDK Path)/platforms/android-21/data/res/drawable-xhdpi/ic_lock_open_wht_24dp.png</string>
    <string name="MadeBy">세번만
\nCopyright <![CDATA[ⓒ]]> 2013-2015 whdghks913
\nAll rights reserved</string>

    <!-- ChangeLog -->
    <string name="ChangeLog_title">수정 내역</string>
    <string name="ChangeLog_msg">
\nv4.1 - 2015-05-25
\n- 전체 잠금 기능 지원
\n- 일부 버그 수정
\n
\nv4.0 - 2015-05-24
\n- Material Design
\n- 전체 어플 카운트 일괄 설정 기능 추가
\n- 잠금해제후 카운트 측정 시작
\n
\nv3.3.2 - 2015-03-08
\n- 버그 픽스
\n
\nv3.3.1 - 2014-05-06
\n-유저 도움말 추가 (아직까지 한국어만 지원합니다)
\n
\nv3.3 - 2014-02-07
\n-API 11 또는 그 아래버전에서 어플 목록 버그 수정
\n
\nv3.2 - 2014-01-30
\n-카운트 초기화 에러 수정
\n
\nv3.1 - 2014-01-28
\n-예약 잠금 지원
\n-등
\n
\nv3.0 - 2014-01-27
\n-새로운 아이콘 적용
\n-기기 잠금 기능 추가
\n-마이너 패치
\n
\nv2.9.1 - 2014-01-27
\n-일부 버그 수정
\n
\nv2.9 - 2014-01-25
\n-사용자에 의해 날짜변경시 카운트 초기화 제한
\n
\nv2.8 - 2014-01-25
\n-12-00에 폰이 꺼져있으면 카운트가 초기화 되지 않는 버그 수정
\n-서비스 중지후, 카운트 초기화 버그 수정
\n
\nv2.7 - 2014-01-23
\n최근 실행 목록에서의 버그 수정
\n
\nv2.6 - 2014-01-22
\n-세번만 어플의 가로모드 완벽지원
\n-hdpi, mdpi 기종에서의 이미지 지원 추가
\n-토스트 알림 추가
\n-메모리 최적화
\n
\nv2.5 - 2014-01-21
\n-런처 어플 선택시 경고 알림 표시
\n
\nv2.4 - 2014-01-21
\n-진동 설정 버그 수정
\n
\nv2.3 - 2014-01-21
\n-10분동안 카운트 변경 제한
\n-카운트 초과 어플의 전체 카운트 변경 제한
\n-카운트 초과 어플의 배경색 변경
\n
\nv2.2 -2014-01-21
\n-어플 선택 리스트 UI 변경
\n
\nv2.1 - 2013-12-16
\n-일부 버그 수정
\n-메모리 최적화
\n
\nv2.0 - 2013-11-27
\n-비밀번호 오류 수정
\n
\nv1.9 - 2013-11-27
\n-화면 꺼짐 버그 수정
\n
\nv1.8 - 2013-11-24
\n-백업, 복원 지원
\n
\nv1.7 - 2013-11-24
\n-카운트 초기화 오류 픽스
\n
\nv1.6 - 2013-11-23
\n-진행중 투명 아이콘 기능 추가
\n
\nv1.5 - 2013-11-22
\n-알려진 버그 수정
\n-소스와 메모리 최적화
\n-진동 설정 추가
\n-넥서스 S와 같은 hdpi 기종에서 레이아웃 오류 수정
\n-킷켓(4.4) 지원
\n
\nv1.3 - 2013-10-23
\n-부팅후 서비스를 종료할때 10분이 지났음에도 불구하고 지나지 않았다고 하는 문제 해결
\n
\nv1.2 - 2013-10-22
\n-세번만 어플의 카운트 지정을 방지합니다
\n
\nv1.1 - 2013-10-22
\n-관리자 권한을 얻어 임의 삭제 방지
\n-지정된 시간마다 알림을 띄워 사용 시간을 인지할수 있도록 합니다(진동 권한 추가)
\n-하루마다 카운터가 초기화 되지 않는 오류 수정
\n-서비스를 실행한후 10분이 지나야만 종료가 가능하게 수정
\n-소스 최적화
\n
\nv1.0 - 2013-10-21
\n-어플 출시</string>

    <!-- MainFragment -->
    <string name="help_main_how_to">스마트폰 어플 실행 횟수를 측정하는 세번만!
\n사용해주셔서 감사합니다!
\n\n왼쪽으로 스와이프하여 세부 설정을 확인하세요.
\n설정 완료후, 오른쪽 아래에 있는 버튼을 터치하여 세번만을 작동시켜주세요!</string>
    <string name="help_main_how_to_land">스마트폰 어플 실행 횟수를 측정하는 세번만!
\n사용해주셔서 감사합니다!</string>

    <!-- Backup Restore -->
    <string name="BackupAndRestore">백업 <![CDATA[&]]> 복원</string>
    <string name="backup">백업</string>
    <string name="restore">복원</string>
    <string name="preference_backup_complete">백업 성공!</string>
    <string name="preference_backup_fail">백업 실패</string>
    <string name="preference_restore_complete">복원 성공! 다시 실행됩니다.</string>
    <string name="preference_restore_fail">복원 실패</string>

    <!-- AppFragment -->
    <string name="loading">로딩중...</string>
    <string name="loading_info">로딩이 오래걸릴경우 아래 버튼을 눌러 서비스를 종료하고 시도해주세요.</string>
    <string name="info_loading">서비스를 중지하고 어플 정보를 로드합니다.</string>
    <string name="loading_retry">서비스 중지후 로드하기</string>
    <string name="count_string_format">전체 : %1$d개, 현재 : %2$d개</string>
    <string name="enter_the_count">Count</string>
    <string name="help_min_count">최소 5 이상 입력해주세요.</string>
    <string name="help_exceed_count">카운트가 초과된 어플은 초기화가 될때까지 수정이 불가능 합니다.</string>
    <string name="fix_min_count">카운트를 5 미만으로 입력하셨습니다.</string>
    <string name="remove">제거</string>
    <string name="edit_count">카운트 수정</string>
    <string name="all_package_add_count">전체 어플 일괄 설정</string>
    <string name="help_all_package_add_count">설치된 모든 어플의 카운트를 일괄 변경 합니다.</string>
    <string name="all_package_remove_count">전체 카운트 삭제</string>
    <string name="all_package_edit_count">전체 카운트 수정</string>
    <string name="help_all_package_count">전체 어플의 카운트를 일괄 수정 합니다.</string>
    <string name="whiteList_dialog_add">화이트리스트에 이 앱을 추가할까요?</string>
    <string name="whiteList_dialog_remove">화이트리스트에서 이 앱을 제거할까요?</string>
    <!--<string name="new_app_count">새로운 앱 설치 관리</string>
    <string name="new_app_count_msg">새로운 앱을 설치했을때 자동으로 카운트를 추가합니다.</string>
    <string name="new_app_count_format">새로운 앱에 적용되는 카운트 : %1$d</string>
    <string name="help_new_app_count">새로 설치된 어플에 자동으로 카운트를 추가합니다.</string> -->

    <!-- Only3 Service -->
    <string name="Only3ServiceTicker">세번만 작동을 시작합니다.</string>
    <string name="Only3ServiceTitle">세번만이 동작중입니다..</string>
    <string name="Only3ServiceMsg">터치하여 메인화면으로 진입하세요!</string>
    <string name="notification_title">카운트가 증가했습니다</string>
    <string name="notification_msg">총 %1$d개, 현재 %2$d개의 카운트가 있습니다.</string>
    <string name="exceed_count_title">카운트가 초과됬습니다!</string>
    <string name="exceed_count_mgs">카운트는 오전 12시 정각에 초기화 됩니다.</string>
    <string name="zero_count_title">카운트가 초기화 되었습니다.</string>
    <string name="zero_count_msg">오늘도 세번만과 함께!</string>
    <string name="app_started_minute_title">설정한 시간 이상 어플을 실행중입니다..</string>
    <string name="app_started_minute_msg">어플을 실행한지 %1$d분이 되었습니다.</string>

    <!-- LockFragment -->
    <string name="lockFragment_main_help">일정 시간동안 스마트폰을 잠궈줍니다.
\n\n잠금 시간동안 사용하실 어플이 있다면 왼쪽으로 스와이프한다음
\n필요한 어플을 2초이상 눌러 화이트 리스트에 추가해주세요!</string>
    <string name="not_allow_past_time_set">지금보다 과거로는 설정할 수 없습니다.</string>
    <string name="not_allow_time_set_than_start_time">시작 시간보다 이전으로는 설정할 수 없습니다.</string>
    <string name="do_not_start_full_lock">잠금을 시작할 수 없습니다. 시간을 다시 확인해주세요</string>

    <!-- Lock -->
    <string name="LockServiceTicker">세번만 전체잠금 시작</string>
    <string name="LockServiceTitle">세번만 전체잠금 동작중..</string>
    <string name="LockServiceMsg">터치하여 잠금 해제 시간을 확인합니다.</string>
    <string name="LockActivity_main_1">세번만 전체잠금중입니다...</string>
    <string name="LockActivity_main_2">전체잠금은 %1$s에 해제됩니다.</string>
    <string name="LockActivity_if">해제 시간을 초과한경우 터치하여 해제</string>
    <string name="LockActivity_warn_1">주의하세요!
\n대부분의 버그를 수정했지만 아직 발견하지 못한 버그가 있을 수 있습니다!
\n중요한 일은 모두 끝내고 사용해주세요!</string>
    <string name="LockActivity_warn_2">잠금 시작 시간이 지금이 아닌경우 재부팅하면 다시 설정하셔야 합니다.
\n만약 잠금 시간동안 사용해야 할 어플이 있다면 화이트 리스트에 추가하신다음 진행하세요
\n\n진행하시겠습니까?</string>
    <string name="LockActivity_info">이미 잠금이 실행중이거나 예약된 상태입니다.
\n예약을 취소할까요?</string>

</resources>
