<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="lee.whdghks913.only3.lock.fragment.LockMainFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/LockActivity_main_1" />

    <TextView
        android:id="@+id/mFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/LockActivity_main_2" />

    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/mIf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LockActivity_if"
        android:background="#1E88E5"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
